--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -3996,6 +3996,6 @@
     "CL_CF_LG_legal": "Pravno",
     "CL_CF_LG_enduser_privacy": "Politika privatnosti podataka",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## uređaja rade u ECO načinu rada",
-    "CL_CF_UC_full_name_with_title": "",
+    "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Ovisno o načinu rada uređaja, neke se značajke možda neće uspješno izvršiti."
 }
