--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -3996,6 +3996,6 @@
     "CL_CF_LG_legal": "Законни",
     "CL_CF_LG_enduser_privacy": "Политика за поверителност на данните",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## устройства работят в режим ECO",
-    "CL_CF_UC_full_name_with_title": "",
+    "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Въз основа на режима на работа на устройството някои функции може да не се изпълнят успешно."
 }
