--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -3996,6 +3996,6 @@
     "CL_CF_LG_legal": "Právní",
     "CL_CF_LG_enduser_privacy": "Zásady ochrany osobních údajů",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## zařízení běží v režimu ECO",
-    "CL_CF_UC_full_name_with_title": "",
+    "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "V závislosti na provozním režimu zařízení nemusí být některé funkce provedeny úspěšně."
 }
