--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -3996,6 +3996,6 @@
     "CL_CF_LG_legal": "مجاز",
     "CL_CF_LG_enduser_privacy": "سیاست حفظ حریم خصوصی داده ها",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## دستگاه در حال اجرای حالت ECO هستند",
-    "CL_CF_UC_full_name_with_title": "",
+    "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "بر اساس حالت عملکرد دستگاه، برخی از ویژگی ها ممکن است با موفقیت اجرا نشوند."
 }
