--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -3996,6 +3996,6 @@
     "CL_CF_LG_legal": "sah",
     "CL_CF_LG_enduser_privacy": "Dasar Privasi Data",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## peranti menjalankan mod ECO",
-    "CL_CF_UC_full_name_with_title": "",
+    "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mod pengendalian peranti, beberapa ciri mungkin tidak berjaya dilaksanakan."
 }
