--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -3996,6 +3996,6 @@
     "CL_CF_LG_legal": "Legaal",
     "CL_CF_LG_enduser_privacy": "Gegevensprivacybeleid",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## apparaten gebruiken de ECO-modus",
-    "CL_CF_UC_full_name_with_title": "",
+    "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Afhankelijk van de bedieningsmodus van het apparaat worden sommige functies mogelijk niet met succes uitgevoerd."
 }
