--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -3996,6 +3996,6 @@
     "CL_CF_LG_legal": "Legal",
     "CL_CF_LG_enduser_privacy": "Politica de confidențialitate a datelor",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## dispozitive rulează modul ECO",
-    "CL_CF_UC_full_name_with_title": "",
+    "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Pe baza modului de operare al dispozitivului, este posibil ca unele funcții să nu fie executate cu succes."
 }
