change the content of "how_data_calculate_tip" key and "how_data_is_calculate_key" key. yangyuxi

--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -3663,7 +3663,7 @@
     "asko_oven_light_setting_content": "",
     "asko_oven_stage_light_content": "",
     "asko_oven_stage_light": "",
-    "asko_oven_color_temperature": "",
+    "asko_oven_color_temperature": "TEMPÉRATURE DE COULEUR",
     "asko_oven_color_temperature_content": "",
     "asko_oven_brightness_light_content": "",
     "asko_oven_time_out_content": "",
@@ -3919,7 +3919,7 @@
     "appliance_disconnect_cannot_open_eco": "L'appareil est déconnecté, veuillez vérifier si le WiFi et la télécommande sont activés.",
     "power_on_remote_eabled_tips": "",
     "power_on_tips": "",
-    "asko_oven_on_during_on": "",
+    "asko_oven_on_during_on": "Allumé pendant l'utilisation",
     "restart": "",
     "how_data_calculate_tip": "La consommation d'énergie et les économies indiquées sont des estimations et non des mesures exactes. \n\n Nos estimations sont basées sur des tests contrôlés, vos résultats réels peuvent donc varier. \n\n La consommation d'énergie réelle dépend de votre environnement et de vos habitudes spécifiques. \n\n Les relevés de notre application peuvent différer de ceux de votre compteur utilitaire ou d'autres appareils.",
     "select_statistic_range_key": "sélectionner la plage statistique",
