--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -3663,7 +3663,7 @@
     "asko_oven_light_setting_content": "",
     "asko_oven_stage_light_content": "",
     "asko_oven_stage_light": "",
-    "asko_oven_color_temperature": "",
+    "asko_oven_color_temperature": "ЦВЕТОВАЯ ТЕМПЕРАТУРА",
     "asko_oven_color_temperature_content": "",
     "asko_oven_brightness_light_content": "",
     "asko_oven_time_out_content": "",
@@ -3919,7 +3919,7 @@
     "appliance_disconnect_cannot_open_eco": "Устройство отключено, пожалуйста, проверьте, включены ли WiFi и дистанционное управление.",
     "power_on_remote_eabled_tips": "",
     "power_on_tips": "",
-    "asko_oven_on_during_on": "",
+    "asko_oven_on_during_on": "ВКЛ во время использования",
     "restart": "",
     "how_data_calculate_tip": "Показанные показатели энергопотребления и экономии являются приблизительными, а не точными измерениями. \n\n Наши оценки основаны на контролируемых тестах, поэтому ваши фактические результаты могут отличаться. \n\n Реальное потребление энергии зависит от вашей конкретной среды и привычек. \n\n Показания нашего приложения могут отличаться от показаний вашего счетчика коммунальных услуг или других устройств.",
     "select_statistic_range_key": "выберите статистический диапазон",
