--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -3663,7 +3663,7 @@
     "asko_oven_light_setting_content": "",
     "asko_oven_stage_light_content": "",
     "asko_oven_stage_light": "",
-    "asko_oven_color_temperature": "",
+    "asko_oven_color_temperature": "FARBTEMPERATUR",
     "asko_oven_color_temperature_content": "",
     "asko_oven_brightness_light_content": "",
     "asko_oven_time_out_content": "",
@@ -3919,7 +3919,7 @@
     "appliance_disconnect_cannot_open_eco": "Das Gerät ist getrennt, bitte überprüfen Sie, ob WLAN und Fernbedienung aktiviert sind.",
     "power_on_remote_eabled_tips": "",
     "power_on_tips": "",
-    "asko_oven_on_during_on": "",
+    "asko_oven_on_during_on": "EIN während der Verwendung",
     "restart": "Neustart",
     "how_data_calculate_tip": "Der angegebene Energieverbrauch und die angegebenen Einsparungen sind Schätzungen und keine genauen Messungen. \n\n Unsere Schätzungen basieren auf kontrollierten Tests, Ihre tatsächlichen Ergebnisse können daher abweichen. \n\n Der tatsächliche Energieverbrauch hängt von Ihrer spezifischen Umgebung und Ihren Gewohnheiten ab. \n\n Die Messwerte unserer App können von denen Ihres Stromzählers oder anderer Geräte abweichen.",
     "select_statistic_range_key": "wählen Sie den statistischen Bereich",
