--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Politique de confidentialité des données",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## appareils fonctionnent en mode ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "En fonction du mode de fonctionnement de l'appareil, certaines fonctionnalités peuvent ne pas être exécutées correctement."
+    "CL_AU_AC_automation_features_may_not_execute_key": "En fonction du mode de fonctionnement de l'appareil, certaines fonctionnalités peuvent ne pas être exécutées correctement.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Grand gril +  Ventilateur + Micro-ondes"
 }
