--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Деректер құпиялылығы саясаты",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## құрылғы ЭКО режимін қосуда",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Құрылғының жұмыс режиміне байланысты кейбір мүмкіндіктер сәтті орындалмауы мүмкін."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Құрылғының жұмыс режиміне байланысты кейбір мүмкіндіктер сәтті орындалмауы мүмкін.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Үлкен гриль + желдеткіш + СВЧ (Қысқа толқынды пеш)"
 }
