--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "데이터 개인 정보 보호 정책",
     "CL_SM_CM_devices_are_running_eco_mode_key": "##개의 기기가 ECO 모드를 실행 중입니다.",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "장치의 작동 모드에 따라 일부 기능이 성공적으로 실행되지 않을 수 있습니다."
+    "CL_AU_AC_automation_features_may_not_execute_key": "장치의 작동 모드에 따라 일부 기능이 성공적으로 실행되지 않을 수 있습니다.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": ""
 }
