--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Retningslinjer for personvern",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## enheter kjører ECO-modus",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Basert på enhetens driftsmodus kan det hende at enkelte funksjoner ikke blir utført."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Basert på enhetens driftsmodus kan det hende at enkelte funksjoner ikke blir utført.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Stor grill + vifte + mikrobølgeovn"
 }
