--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Datasekretesspolicy",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## enheter kör ECO-läge",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Baserat på enhetens driftläge kanske vissa funktioner inte körs korrekt."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Baserat på enhetens driftläge kanske vissa funktioner inte körs korrekt.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Stor grill + Fläkt + Mikro"
 }
