--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "นโยบายความเป็นส่วนตัวของข้อมูล",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## อุปกรณ์กำลังใช้งานโหมด ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "ขึ้นอยู่กับโหมดการทำงานของอุปกรณ์ คุณสมบัติบางอย่างอาจไม่สามารถทำงานได้สำเร็จ"
+    "CL_AU_AC_automation_features_may_not_execute_key": "ขึ้นอยู่กับโหมดการทำงานของอุปกรณ์ คุณสมบัติบางอย่างอาจไม่สามารถทำงานได้สำเร็จ",
+    "CL_DV_OV_g800_mode_grill_fan_micro": ""
 }
