--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Veri Gizliliği Politikası",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## cihaz ECO modunda çalışıyor",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Cihazın çalışma moduna bağlı olarak bazı özellikler başarıyla yürütülemeyebilir."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Cihazın çalışma moduna bağlı olarak bazı özellikler başarıyla yürütülemeyebilir.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": ""
 }
