--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Політика конфіденційності даних",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## пристроїв працюють у режимі ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Залежно від режиму роботи пристрою деякі функції можуть не виконуватися успішно."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Залежно від режиму роботи пристрою деякі функції можуть не виконуватися успішно.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Великий гриль + вентилятор + мікрохвилі"
 }
