add "CL_DV_OV_g800_mode_grill_fan_micro" key

--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -3361,7 +3361,7 @@
     "default": "Standard",
     "if_key": "wenn",
     "enable_key": "aktivieren",
-    "no_report_history": "",
+    "no_report_history": "Es wurden keine Probleme eingereicht.",
     "routine_key": "Routine",
     "automation_name_key": "Automatisierungsname",
     "send_notifi_example_key": "Beispiel: senden “Klimaanlage ist eingeschaltet”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Datenschutzhinweis",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## Geräte laufen im ECO-Modus",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Abhängig vom Betriebsmodus des Geräts können einige Funktionen möglicherweise nicht erfolgreich ausgeführt werden."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Abhängig vom Betriebsmodus des Geräts können einige Funktionen möglicherweise nicht erfolgreich ausgeführt werden.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Großer Grill + Ventilator + Mikrowelle"
 }
