--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -3361,7 +3361,7 @@
     "default": "Oletus",
     "if_key": "jos",
     "enable_key": "ota käyttöön",
-    "no_report_history": "",
+    "no_report_history": "Mitään ongelmia ei ole lähetetty.",
     "routine_key": "rutiini",
     "automation_name_key": "Automaationimi",
     "send_notifi_example_key": "Esimerkki: lähetä “Ilmastointi on päällä”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Tietosuojakäytäntö",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## laitteet käyttävät ECO-tilaa",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Laitteen käyttötilasta johtuen jotkin ominaisuudet eivät ehkä toimi onnistuneesti."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Laitteen käyttötilasta johtuen jotkin ominaisuudet eivät ehkä toimi onnistuneesti.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Suuri grilli + tuuletin + mikroaallot"
 }
