--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -3361,7 +3361,7 @@
     "default": "تقصير",
     "if_key": "إذا",
     "enable_key": "تمكين",
-    "no_report_history": "",
+    "no_report_history": "لم يتم تقديم أية مشكلات.",
     "routine_key": "روتين",
     "automation_name_key": "اسم التحكم الآلي",
     "send_notifi_example_key": "مثال: إرسال “المكيف مشغل”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "سياسة خصوصية البيانات",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## الأجهزة تعمل بوضع ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "بناءً على وضع تشغيل الجهاز، قد لا يتم تنفيذ بعض الميزات بنجاح."
+    "CL_AU_AC_automation_features_may_not_execute_key": "بناءً على وضع تشغيل الجهاز، قد لا يتم تنفيذ بعض الميزات بنجاح.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": ""
 }
