--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -3361,7 +3361,7 @@
     "default": "Standard",
     "if_key": "hvis",
     "enable_key": "aktivere",
-    "no_report_history": "",
+    "no_report_history": "Ingen problemer er blevet indsendt.",
     "routine_key": "rutine",
     "automation_name_key": "Automatiseringsnavn",
     "send_notifi_example_key": "Eksempel: send “Aircondition er tændt”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Databeskyttelsespolitik",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## enheder kører ECO-tilstand",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Baseret på enhedens driftstilstand kan nogle funktioner muligvis ikke udføres korrekt."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Baseret på enhedens driftstilstand kan nogle funktioner muligvis ikke udføres korrekt.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Stor grill + blæser + mikrobølge"
 }
