--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -3361,7 +3361,7 @@
     "default": "پیش فرض",
     "if_key": "اگر",
     "enable_key": "فعال کردن",
-    "no_report_history": "",
+    "no_report_history": "هیچ مسئله ای ارسال نشده است.",
     "routine_key": "روتین",
     "automation_name_key": "نام اتوماسیون",
     "send_notifi_example_key": "مثال: ارسال “کولر روشن است”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "سیاست حفظ حریم خصوصی داده ها",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## دستگاه در حال اجرای حالت ECO هستند",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "بر اساس حالت عملکرد دستگاه، برخی از ویژگی ها ممکن است با موفقیت اجرا نشوند."
+    "CL_AU_AC_automation_features_may_not_execute_key": "بر اساس حالت عملکرد دستگاه، برخی از ویژگی ها ممکن است با موفقیت اجرا نشوند.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": ""
 }
