--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -3361,7 +3361,7 @@
     "default": "בְּרִירַת מֶחדָל",
     "if_key": "אם",
     "enable_key": "לאפשר",
-    "no_report_history": "",
+    "no_report_history": "לא הוגשו בעיות.",
     "routine_key": "שגרה",
     "automation_name_key": "שם האוטומציה",
     "send_notifi_example_key": "דוגמה: שלח “המזגן פועל”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "מדיניות פרטיות נתונים",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## מכשירים פועלים במצב ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "בהתבסס על מצב ההפעלה של המכשיר, ייתכן שחלק מהתכונות לא יופעלו בהצלחה."
+    "CL_AU_AC_automation_features_may_not_execute_key": "בהתבסס על מצב ההפעלה של המכשיר, ייתכן שחלק מהתכונות לא יופעלו בהצלחה.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": ""
 }
