--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -3361,7 +3361,7 @@
     "default": "Bawaan",
     "if_key": "jika",
     "enable_key": "mengaktifkan",
-    "no_report_history": "",
+    "no_report_history": "Tidak ada masalah yang telah diajukan.",
     "routine_key": "rutin",
     "automation_name_key": "Nama otomatisasi",
     "send_notifi_example_key": "Contoh: kirim “AC sudah menyala”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Kebijakan Privasi Data",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## perangkat menjalankan mode ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mode pengoperasian perangkat, beberapa fitur mungkin tidak berhasil dijalankan."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mode pengoperasian perangkat, beberapa fitur mungkin tidak berhasil dijalankan.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": ""
 }
