--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -3361,7 +3361,7 @@
     "default": "Predefinita",
     "if_key": "se",
     "enable_key": "abilitare",
-    "no_report_history": "",
+    "no_report_history": "Non sono state inviate segnalazioni.",
     "routine_key": "routine",
     "automation_name_key": "Nome dell'automazione",
     "send_notifi_example_key": "Esempio: invia “Il condizionatore è acceso”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Informativa sulla privacy dei dati",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## dispositivi stanno utilizzando la modalità ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "In base alla modalità operativa del dispositivo, alcune funzionalità potrebbero non essere eseguite correttamente."
+    "CL_AU_AC_automation_features_may_not_execute_key": "In base alla modalità operativa del dispositivo, alcune funzionalità potrebbero non essere eseguite correttamente.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Griglia grande + Ventola + Microonde"
 }
