--- a/language/i18n_ku_TR.json
+++ b/language/i18n_ku_TR.json
@@ -3361,7 +3361,7 @@
     "default": "",
     "if_key": "",
     "enable_key": "",
-    "no_report_history": "",
+    "no_report_history": "Pirsgirêkên tu yek nehatine pêşkêş kirin.",
     "routine_key": "",
     "automation_name_key": "",
     "send_notifi_example_key": "",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "",
     "CL_SM_CM_devices_are_running_eco_mode_key": "",
     "CL_CF_UC_full_name_with_title": "",
-    "CL_AU_AC_automation_features_may_not_execute_key": ""
+    "CL_AU_AC_automation_features_may_not_execute_key": "",
+    "CL_DV_OV_g800_mode_grill_fan_micro": ""
 }
