--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -3361,7 +3361,7 @@
     "default": "Стандардно",
     "if_key": "ако",
     "enable_key": "овозможи",
-    "no_report_history": "",
+    "no_report_history": "Не се поднесени проблеми.",
     "routine_key": "рутина",
     "automation_name_key": "Име на автоматизација",
     "send_notifi_example_key": "Пример: прати “Климатизацијата е вклучена”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Политика за приватност на податоците",
     "CL_SM_CM_devices_are_running_eco_mode_key": "Уредите ## работат на режимот ЕКО",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Врз основа на режимот на работа на уредот, некои функции може да не се извршат успешно."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Врз основа на режимот на работа на уредот, некои функции може да не се извршат успешно.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": ""
 }
