--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -3361,7 +3361,7 @@
     "default": "Lalai",
     "if_key": "jika",
     "enable_key": "membolehkan",
-    "no_report_history": "",
+    "no_report_history": "Tiada isu telah dikemukakan.",
     "routine_key": "rutin",
     "automation_name_key": "Nama automasi",
     "send_notifi_example_key": "Contoh: hantar “Penyaman udara dihidupkan”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Dasar Privasi Data",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## peranti menjalankan mod ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mod pengendalian peranti, beberapa ciri mungkin tidak berjaya dilaksanakan."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mod pengendalian peranti, beberapa ciri mungkin tidak berjaya dilaksanakan.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": ""
 }
