--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -3361,7 +3361,7 @@
     "default": "Standaard",
     "if_key": "als",
     "enable_key": "inschakelen",
-    "no_report_history": "",
+    "no_report_history": "Er zijn geen problemen ingediend.",
     "routine_key": "routine",
     "automation_name_key": "Automatiseringsnaam",
     "send_notifi_example_key": "Voorbeeld: stuur “Airconditioner staat aan”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Gegevensprivacybeleid",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## apparaten gebruiken de ECO-modus",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Afhankelijk van de bedieningsmodus van het apparaat worden sommige functies mogelijk niet met succes uitgevoerd."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Afhankelijk van de bedieningsmodus van het apparaat worden sommige functies mogelijk niet met succes uitgevoerd.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Grote grill + Magnetron"
 }
