--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -1278,8 +1278,8 @@
     "preview": "Pré-visualizar",
     "camera_permissions": "O sistema detetou que não obteve permissões da câmara.",
     "go_setting": "ABRIR CONFIGURAÇÕES",
-    "month": "mês",
-    "year": "ano",
+    "month": "Mês",
+    "year": "Ano",
     "chart_jan": "Jan",
     "chart_feb": "Fev",
     "chart_mar": "Mar",
@@ -3361,7 +3361,7 @@
     "default": "Padrão",
     "if_key": "se",
     "enable_key": "habilitar",
-    "no_report_history": "",
+    "no_report_history": "Nenhum problema foi submetido.",
     "routine_key": "rotina",
     "automation_name_key": "Nome da automação",
     "send_notifi_example_key": "Exemplo: enviar “Ar condicionado está ligado”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Política de Privacidade de Dados",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## dispositivos estão executando o modo ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Com base no modo operacional do dispositivo, alguns recursos podem não ser executados com sucesso."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Com base no modo operacional do dispositivo, alguns recursos podem não ser executados com sucesso.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Grelha grande + Ventilador + Micro-ondas"
 }
