--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -3361,7 +3361,7 @@
     "default": "Mod implicit",
     "if_key": "dacă",
     "enable_key": "activați",
-    "no_report_history": "",
+    "no_report_history": "Nu au fost trimise probleme.",
     "routine_key": "rutină",
     "automation_name_key": "Nume de automatizare",
     "send_notifi_example_key": "Exemplu: trimite “Aerul condiționat este pornit”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Politica de confidențialitate a datelor",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## dispozitive rulează modul ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "Pe baza modului de operare al dispozitivului, este posibil ca unele funcții să nu fie executate cu succes."
+    "CL_AU_AC_automation_features_may_not_execute_key": "Pe baza modului de operare al dispozitivului, este posibil ca unele funcții să nu fie executate cu succes.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Grătar mare + ventilator + microunde"
 }
