--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -3361,7 +3361,7 @@
     "default": "Predvolené",
     "if_key": "ak",
     "enable_key": "povoliť",
-    "no_report_history": "",
+    "no_report_history": "Žiadne problémy neboli odoslané.",
     "routine_key": "rutina",
     "automation_name_key": "Názov automatizácie",
     "send_notifi_example_key": "Príklad: poslať “Klimatizácia je zapnutá”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Zásady ochrany osobných údajov",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## zariadení je spustených v režime ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "V závislosti od prevádzkového režimu zariadenia sa niektoré funkcie nemusia úspešne spustiť."
+    "CL_AU_AC_automation_features_may_not_execute_key": "V závislosti od prevádzkového režimu zariadenia sa niektoré funkcie nemusia úspešne spustiť.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Veľký gril + ventilátor + mikrovlnná rúra"
 }
