--- a/language/i18n_sr_BA.json
+++ b/language/i18n_sr_BA.json
@@ -3361,7 +3361,7 @@
     "default": "Uobičajeno",
     "if_key": "ако",
     "enable_key": "омогући",
-    "no_report_history": "",
+    "no_report_history": "Nema podnetih problema.",
     "routine_key": "рутина",
     "automation_name_key": "Име аутоматизације",
     "send_notifi_example_key": "Пример: пошаљи “Клима уређај је укључен”",
@@ -3997,5 +3997,6 @@
     "CL_CF_LG_enduser_privacy": "Политика приватности података",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## уређаји користе ЕЦО режим",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
-    "CL_AU_AC_automation_features_may_not_execute_key": "У зависности од режима рада уређаја, неке функције се можда неће успешно извршити."
+    "CL_AU_AC_automation_features_may_not_execute_key": "У зависности од режима рада уређаја, неке функције се можда неће успешно извршити.",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Veliki roštilj + ventilator + mikrotalasi"
 }
