--- a/language/i18n_zh_TW.json
+++ b/language/i18n_zh_TW.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "設置Wi-Fi",
     "full": "满",
     "usage_frequency_metrics": "使用频率",
-    "super_cool_upper_camel_case": "超級冷卻",
-    "super_freeze_upper_camel_case": "超級冷藏",
+    "super_cool_upper_camel_case": "速冷",
+    "super_freeze_upper_camel_case": "速凍",
     "input_password_cdc_tips": "密碼必須由8至20個字符組成，其中至少包含1個數字、1個大寫字母、1個小寫字母和1個特殊字符(#?!@$%^&*-)。",
     "self_pump_setup_1": "關閉堆泵電源，同時長按 On/Off 按鈕和 Down 按鈕 3 秒，然後 Wi-Fi 指示燈閃爍。",
     "self_pump_setup_2": "根據APP提示連接Wi-Fi。連線成功後，Wi-Fi 指示燈會亮起。",
